@@ -1,5 +1,10 @@
 2013-02-25  Simon Cook  <simon.cook@embecosm.com>
 
+	* arc-versions.sh: Updated binutils, gcc and newlib branches to
+	checkout upstream mainline tracking branches.
+
+2013-02-25  Simon Cook  <simon.cook@embecosm.com>
+
 	* arc-versions.sh: Updated binutils, gcc, gdb and newlib branch
 	references
 
